--- a/Exercises2023/Ex3_4/Makefile
+++ b/Exercises2023/Ex3_4/Makefile
@@ -1,6 +1,6 @@
 CC=g++ #Name of compiler
 FLAGS=-std=c++20 -w #Compiler flags (the s makes it silent)
-TARGET=FiniteFunctions #Executable name
+TARGET=Test #Executable name
 OBJECTS=FiniteFunctions.o
 LIBS=-I ../../GNUplot/ -lboost_iostreams
 
@@ -9,9 +9,6 @@ ${TARGET}:${OBJECTS} #Make target from objects
 	@echo "Linking..."
 	${CC} ${FLAGS} ${OBJECTS} ${LIBS} -o ${TARGET}
 	@make clean
-
-Test.o : Test.cxx FiniteFunctions.h
-	${CC} ${FLAGS} ${LIBS} -c Test.cxx
 
 FiniteFunctions.o : FiniteFunctions.cxx FiniteFunctions.h
 	${CC} ${FLAGS} ${LIBS} -c FiniteFunctions.cxx
