--- a/Exercises2023/Ex3_4/Makefile
+++ b/Exercises2023/Ex3_4/Makefile
@@ -1,7 +1,7 @@
 CC=g++ #Name of compiler
 FLAGS=-std=c++20 -w #Compiler flags (the s makes it silent)
 TARGET=Test #Executable name
-OBJECTS=FiniteFunctions.o
+OBJECTS=Test.o FiniteFunctions.o
 LIBS=-I ../../GNUplot/ -lboost_iostreams
 
 #First target in Makefile is default
@@ -9,6 +9,9 @@ ${TARGET}:${OBJECTS} #Make target from objects
 	@echo "Linking..."
 	${CC} ${FLAGS} ${OBJECTS} ${LIBS} -o ${TARGET}
 	@make clean
+
+Test.o : Test.cxx FiniteFunctions.h
+	${CC} ${FLAGS} ${LIBS} -c Test.cxx
 
 FiniteFunctions.o : FiniteFunctions.cxx FiniteFunctions.h
 	${CC} ${FLAGS} ${LIBS} -c FiniteFunctions.cxx
